syntax = "proto3";

package v1;

option go_package = "zeelso.com/proto/community-post/v1";

service CommunityPostService {
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    rpc GetPost(GetPostRequest) returns (PostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string user_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreatePostRequest {
    Post post = 1;
}

message GetPostRequest {
    string id = 1;
}

message UpdatePostRequest {
    string id = 1;
    string title = 2;
    string content = 3;
    string user_id = 4;
}

message DeletePostRequest {
    string id = 1;
}

message PostResponse {
    Post post = 1;
    string message = 2;  // Eğer gerekliyse başka bilgileri de içerebilir.
}

message DeletePostResponse {
    bool success = 1;
    string message = 2;
}

message ListPostsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
}
